force-app/main/default/objects/Performance_Insights_Remediation_Plans__c/Performance_Insights_Remediation_Plans__c.object-meta.xml
<CustomObject>
    <label>Performance Insights &amp; Remediation Plans</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Performance Insights &amp; Remediation Plans</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Performance Insights &amp; Remediation Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>