force-app/main/default/objects/Performance_Insights_Remediation_Plans__c/fields/Performance_Insights__c.field-meta.xml
<CustomField>
    <fullName>Performance_Insights__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Performance Insights</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>