force-app/main/default/objects/Performance_Insights_Remediation_Plans__c/fields/Product_Segment__c.field-meta.xml
<CustomField>
    <fullName>Product_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>