force-app/main/default/objects/Performance_Insights_Remediation_Plans__c/fields/Remediation_Action__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Action__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remediation Action</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>