force-app/main/default/objects/Performance_Insights_Remediation_Plans__c/fields/Remediation_Owners__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Owners__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remediation Owners</label>
    <type>TextArea</type>
</CustomField>