force-app/main/default/objects/Performance_Insights_Remediation_Plans__c/fields/Remediation_Target_Date_s__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Target_Date_s__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remediation Target Date(s)</label>
    <type>TextArea</type>
</CustomField>