force-app/main/default/objects/Performance_Insights_Remediation_Plans__c/fields/Significant_Events__c.field-meta.xml
<CustomField>
    <fullName>Significant_Events__c</fullName>
    <label>Significant Events</label>
    <referenceTo>Territory_Level_Plan__c</referenceTo>
    <relationshipLabel>Performance Insights &amp; Remediation Plans</relationshipLabel>
    <relationshipName>Performance_Insights_Remediation_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>