force-app/main/default/objects/Performance_Insights_Remediation_Plans__c/fields/X2019_Day_Adj_Growth_Vs_PY__c.field-meta.xml
<CustomField>
    <fullName>X2019_Day_Adj_Growth_Vs_PY__c</fullName>
    <label>2019 Day Adj % Growth Vs PY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>